--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "@material-tailwind/react": "^2.1.9",
     "bookracy": "file:",
     "flowbite-react": "^0.10.1",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.26.0",
+    "typescript-eslint": "^8.1.0",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.7",
     "@types/node": "^22.2.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
