--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ofetch": "^1.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-reader": "^2.0.11",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
