--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -26,16 +28,18 @@
     "bookracy": "file:",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "epubjs": "^0.3.93",
     "lucide-react": "^0.427.0",
     "ofetch": "^1.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-reader": "^2.0.11",
+    "react-spring": "^9.7.4",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "typescript-eslint": "^8.1.0",
-    "zustand": "^4.5.4"
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.51.23",
@@ -58,6 +62,6 @@
     "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4",
-    "vite": "^5.4.0"
+    "vite": "^5.4.1"
   }
 }
