--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -32,5 +32,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"]
+  "include": ["src", "types/epubjs.d.ts", "types/vite-env.d.ts"]
 }
