--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
       "@/routes/*": ["./src/routes/*"],
       "@/lib/*": ["./src/lib/*"],
       "@/api/*": ["./src/api/*"]
-    }
+    },
+    "typeRoots": ["./node_modules/@types", "./types"]
   }
 }
