--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -33,5 +33,5 @@
     "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true
   },
-  "include": ["src", "types/epubjs.d.ts", "types/vite-env.d.ts"]
+  "include": ["src", "types/vite-env.d.ts"]
 }
