fix all ts errors

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,12 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "@/components/*": ["./src/components/*"],
-      "@/hooks/*": ["./src/hooks/*"],
-      "@/routes/*": ["./src/routes/*"],
-      "@/lib/*": ["./src/lib/*"],
-      "@/api/*": ["./src/api/*"]
+      "@/*": ["./src/*"]
     },
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
@@ -29,5 +24,5 @@
     "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true
   },
-  "include": ["src", "types/vite-env.d.ts"]
+  "include": ["src", "types/**/*.d.ts"]
 }
