--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "tsc -b && vite build",
     "lint": "eslint src/",
     "lint:fix": "eslint --fix src/",
+    "format": "prettier --check . --ignore-path ./.gitignore",
+    "format:fix": "prettier --write . --ignore-path ./.gitignore",
+    "typecheck": "tsc --noEmit",
     "preview": "vite preview"
   },
   "dependencies": {
