--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,12 +11,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "@/components/*": ["./src/components/*"],
-      "@/hooks/*": ["./src/hooks/*"],
-      "@/routes/*": ["./src/routes/*"],
-      "@/lib/*": ["./src/lib/*"],
-      "@/api/*": ["./src/api/*"]
+      "@/*": ["./src/*"]
     },
     "typeRoots": ["./node_modules/@types", "./types"]
   }
