--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -14,5 +14,5 @@
     "strict": true,
     "noEmit": true
   },
-  "include": ["src", "vite.config.ts"]
+  "include": ["src", "types/**/*.d.ts", "vite.config.ts"]
 }
