--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Setup
-        uses: ./tooling/action.yml
+        uses: ./tooling/github
 
       - name: Lint
         run: pnpm lint
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Setup
-        uses: ./tooling/action.yml
+        uses: ./tooling/github
 
       - name: Format
         run: pnpm format
@@ -40,7 +40,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Setup
-        uses: ./tooling/action.yml
+        uses: ./tooling/github
 
       - name: Typecheck
         run: pnpm typecheck
