--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-scroll-area": "^1.2.0-rc.7",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
@@ -29,7 +29,6 @@
     "@radix-ui/react-visually-hidden": "^1.1.0",
     "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-router": "^1.48.1",
-    "bookracy": "file:",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "epubjs": "^0.3.93",
@@ -39,7 +38,6 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
-    "react-reader": "^2.0.11",
     "react-spring": "^9.7.4",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
