--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-spring": "^9.7.4",
+    "react-swipeable": "^7.0.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
