--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
-    "@marsidev/react-turnstile": "^1.0.0",
+    "@marsidev/react-turnstile": "^1.0.2",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -27,47 +27,47 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@radix-ui/react-visually-hidden": "^1.1.0",
-    "@tanstack/react-query": "^5.51.23",
-    "@tanstack/react-router": "^1.48.1",
+    "@tanstack/react-query": "^5.56.2",
+    "@tanstack/react-router": "^1.57.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "epubjs": "^0.3.93",
     "input-otp": "^1.2.4",
-    "lucide-react": "^0.427.0",
+    "lucide-react": "^0.441.0",
     "ofetch": "^1.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.52.2",
+    "react-hook-form": "^7.53.0",
     "react-spring": "^9.7.4",
     "react-swipeable": "^7.0.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "typescript-eslint": "^8.1.0",
+    "typescript-eslint": "^8.5.0",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
-    "@tanstack/react-query-devtools": "^5.51.23",
-    "@tanstack/router-devtools": "^1.48.1",
-    "@tanstack/router-plugin": "^1.47.0",
-    "@types/node": "^22.3.0",
-    "@types/react": "^18.3.3",
+    "@tanstack/react-query-devtools": "^5.56.2",
+    "@tanstack/router-devtools": "^1.57.13",
+    "@tanstack/router-plugin": "^1.57.13",
+    "@types/node": "^22.5.5",
+    "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
+    "@typescript-eslint/eslint-plugin": "^8.5.0",
+    "@typescript-eslint/parser": "^8.5.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.0",
+    "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "postcss": "^8.4.41",
+    "eslint-plugin-react-hooks": "5.1.0-beta-26f2496093-20240514",
+    "eslint-plugin-react-refresh": "^0.4.12",
+    "postcss": "^8.4.45",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
-    "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.4",
-    "vite": "^5.4.1"
+    "tailwindcss": "^3.4.11",
+    "typescript": "^5.6.2",
+    "vite": "^5.4.5"
   }
 }
