--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@marsidev/react-turnstile": "^1.0.2",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -33,6 +34,7 @@
     "clsx": "^2.1.1",
     "epubjs": "^0.3.93",
     "input-otp": "^1.2.4",
+    "jose": "^5.9.2",
     "lucide-react": "^0.441.0",
     "ofetch": "^1.3.4",
     "react": "^18.3.1",
