--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.2.0-rc.7",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
@@ -34,7 +35,6 @@
     "epubjs": "^0.3.93",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.441.0",
-    "md5": "^2.3.0",
     "ofetch": "^1.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
