--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-spring": "^9.7.5",
     "react-swipeable": "^7.0.2",
     "sonner": "^1.7.4",
+    "spark-md5": "^3.0.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript-eslint": "^8.26.0",
@@ -55,6 +56,7 @@
     "@types/node": "^22.13.10",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/spark-md5": "^3.0.5",
     "@typescript-eslint/eslint-plugin": "^8.26.0",
     "@typescript-eslint/parser": "^8.26.0",
     "@vitejs/plugin-react": "^4.3.4",
