--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ofetch": "^1.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.53.0",
     "react-spring": "^9.7.4",
     "react-swipeable": "^7.0.1",
