--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "react-hook-form": "7.54.2",
     "react-spring": "^9.7.4",
     "react-swipeable": "^7.0.1",
+    "react-virtuoso": "^4.12.7",
     "sonner": "^1.5.0",
+    "spark-md5": "^3.0.2",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "typescript-eslint": "^8.26.0",
