--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@eslint/js": "^9.27.0",
     "@hookform/resolvers": "3.10.0",
     "@marsidev/react-turnstile": "^1.0.2",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
