--- a/package.json
+++ b/package.json
@@ -14,64 +14,51 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@hookform/resolvers": "3.10.0",
-    "@marsidev/react-turnstile": "^1.0.2",
-    "@radix-ui/react-aspect-ratio": "^1.1.0",
-    "@radix-ui/react-avatar": "^1.1.0",
-    "@radix-ui/react-collapsible": "^1.1.0",
-    "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-progress": "^1.1.6",
-    "@radix-ui/react-scroll-area": "^1.2.0-rc.7",
-    "@radix-ui/react-select": "^2.1.1",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.2",
-    "@radix-ui/react-visually-hidden": "^1.1.0",
-    "@tanstack/react-query": "^5.56.2",
-    "@tanstack/react-router": "^1.57.13",
-    "class-variance-authority": "^0.7.0",
+    "@hookform/resolvers": "5.1.1",
+    "@marsidev/react-turnstile": "^1.1.0",
+    "@tanstack/react-query": "^5.81.2",
+    "@tanstack/react-router": "^1.121.27",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "epubjs": "^0.3.93",
-    "input-otp": "^1.2.4",
-    "jose": "^5.9.2",
-    "lucide-react": "^0.441.0",
+    "input-otp": "^1.4.2",
+    "jose": "^6.0.11",
+    "lucide-react": "^0.522.0",
     "ofetch": "^1.4.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "radix-ui": "^1.4.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
-    "react-hook-form": "7.54.2",
-    "react-spring": "^9.7.4",
-    "react-swipeable": "^7.0.1",
-    "sonner": "^1.5.0",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript-eslint": "^8.26.0",
-    "zod": "3.24.2",
-    "zustand": "^4.5.6"
+    "react-hook-form": "7.58.1",
+    "react-spring": "^10.0.1",
+    "react-swipeable": "^7.0.2",
+    "sonner": "^2.0.5",
+    "tailwind-merge": "^3.3.1",
+    "typescript-eslint": "^8.34.1",
+    "zod": "3.25.67",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
-    "@tanstack/react-query-devtools": "^5.67.2",
-    "@tanstack/router-devtools": "^1.114.12",
-    "@tanstack/router-plugin": "^1.114.12",
-    "@types/node": "^22.13.10",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "@typescript-eslint/eslint-plugin": "^8.26.0",
-    "@typescript-eslint/parser": "^8.26.0",
-    "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.22.0",
-    "eslint-config-prettier": "^9.1.0",
+    "@tailwindcss/vite": "^4.1.10",
+    "@tanstack/react-query-devtools": "^5.81.2",
+    "@tanstack/router-devtools": "^1.121.27",
+    "@tanstack/router-plugin": "^1.121.29",
+    "@types/node": "^24.0.3",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@typescript-eslint/eslint-plugin": "^8.34.1",
+    "@typescript-eslint/parser": "^8.34.1",
+    "@vitejs/plugin-react": "^4.5.2",
+    "eslint": "^9.29.0",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-react-hooks": "5.1.0-beta-26f2496093-20240514",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "postcss": "^8.5.3",
+    "eslint-plugin-react-hooks": "5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
     "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.8.2",
-    "vite": "^5.4.14"
+    "prettier-plugin-tailwindcss": "^0.6.13",
+    "tailwindcss": "^4.1.10",
+    "tw-animate-css": "^1.3.4",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.5"
   }
 }
