--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@eslint/js": "^9.32.0",
     "@hookform/resolvers": "5.1.1",
     "@marsidev/react-turnstile": "^1.1.0",
     "@tanstack/react-query": "^5.81.2",
